style: fix grid gap

--- a/src/app/modules/client/pages/home/home.component.scss
+++ b/src/app/modules/client/pages/home/home.component.scss
@@ -167,13 +167,12 @@ height: 100%;
         display:flex;
         margin: 50px auto;
         font-weight: bold;
-        justify-content: center;
-        align-items: center;
-        height: 50px; 
-        width:200px;
+        padding: 10px 15px;
+        width: fit-content;
         border-radius: .5rem;
         box-shadow: 0px 3px 5px RGB(43 80 237 / 20%);
         background: #fff;
+        border: 3px solid #fafafa;
         cursor: pointer;
       }
     }
