--- a/src/app/modules/client/pages/product/product.component.scss
+++ b/src/app/modules/client/pages/product/product.component.scss
@@ -414,7 +414,7 @@
 
         .container {
           grid-template-columns: repeat(6, 1fr);
-          grid-gap: 20px 2px;
+          grid-gap: 20px 5px;
         }
       }
     }
